// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

message ComputeBetaFirewallPolicy {
  string name = 1;
  string description = 2;
  string fingerprint = 3;
  string self_link = 4;
  string self_link_with_id = 5;
  int64 rule_tuple_count = 6;
  string display_name = 7;
  string parent = 8;
}

message ApplyComputeBetaFirewallPolicyRequest {
  ComputeBetaFirewallPolicy resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeBetaFirewallPolicyRequest {
  string service_account_file = 1;
  ComputeBetaFirewallPolicy resource = 2;
}

message ListComputeBetaFirewallPolicyRequest {
  string service_account_file = 1;
  string Parent = 2;
}

message ListComputeBetaFirewallPolicyResponse {
  repeated ComputeBetaFirewallPolicy items = 1;
}

service ComputeBetaFirewallPolicyService {
  rpc ApplyComputeBetaFirewallPolicy(ApplyComputeBetaFirewallPolicyRequest) returns (ComputeBetaFirewallPolicy);
  rpc DeleteComputeBetaFirewallPolicy(DeleteComputeBetaFirewallPolicyRequest) returns (google.protobuf.Empty);
  rpc ListComputeBetaFirewallPolicy(ListComputeBetaFirewallPolicyRequest) returns (ListComputeBetaFirewallPolicyResponse);
}
